--- a/index.css
+++ b/index.css
@@ -74,13 +74,13 @@
 }
 
 .main-logo{
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     margin: 0 0;
     display: block;
 }
 .main-word{
-    font-size: 2.0rem;
+    font-size: 1.5rem;
     color: #000;
     text-decoration: none;
     justify-content: center;
@@ -242,6 +242,15 @@
     color: #ffffff;
     font-weight: 500;
 }
+.twitter{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 100px;
+    color: #000000;
+    font-weight: 500;
+
+}
 
 .twitter-timeline{
     display: flex;
@@ -252,6 +261,7 @@
     padding: 10px 25px;
     color: #ffffff;
     font-weight: 500;
+    
 }
 
 
@@ -444,4 +454,95 @@ gap: 20px;
 .footer-git-image{
 width: 50px;
 height: 50px;
+}
+
+/* responsive対応 */
+@media(max-width:800px){
+    /* 共通部分 */
+
+    /* header部 */
+    .header{
+        align-items: center;
+        max-height: fit-content;
+        justify-content: center;
+    }
+    .header-logo{
+        max-width: 80px;
+        max-height: 80px;
+    }
+    .header-title{
+        font-size: 1.5rem;
+    }
+
+    .header-name{
+        font-size: 2.0rem;
+    }
+    .content{
+        width: 100%;
+        flex-direction: column-reverse;
+
+    }
+    .side{
+        width: 100%;
+    }
+    .footer{
+        flex-direction: column;
+    }
+
+    /* 部分main */
+    .main{
+        width: 100%;
+    }
+    .main-title{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .main-image{
+        display: flex;
+        justify-content: center;
+    }
+    .main-word{
+        font-size: 1.5rem;
+    }
+    .main-explain-content{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+        border-bottom: #25412a 2px solid;
+    }
+    .main-explain-content img{
+        width: 100%;
+    }
+    .wellcome-zemi{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .newcommer-grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        margin: 20px 0;
+    }
+    .LINE-register{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .button{
+        max-width: 250px;
+    }
+
+    /* zemi 一覧画面 */
+    .zemi-grid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        margin: 20px 0;
+    }
+
+
 }
