--- a/index.css
+++ b/index.css
@@ -49,14 +49,12 @@
 
 /* コンテンツ部分 */
 .wrapper{
-    margin: 0 4%;
+    padding: 0 3%;
 }
 
 .content{
     display: flex;
     justify-content: space-between;
-    gap: 20px;
-    
 }
 
 
@@ -105,8 +103,8 @@
     margin-bottom: 2.0rem;
 }
 .main-explain-content img{
-    height: auto;
-    width: 40%;
+    width: 48%;
+    height: 27%;
     margin: 0 0;
     display: block;
 }
@@ -129,7 +127,6 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    max-width: 280px;
     padding: 10px 25px;
     color: #695a5a;
     font-weight: 500;
@@ -144,11 +141,11 @@
     position: relative;
     display: flex;
     justify-content: space-around;
-    align-items: cente;
+    align-items: center;
     margin: 0 auto;
-    min-width: 300px;
     padding: 10px 25px;
     color: #000000;
+    min-width: 100%;
     font-size: 1.5rem;
     transition: 0.3s ease-in-out;
     font-weight: 500;
@@ -288,7 +285,7 @@
 }
 
 .navigation{
-    padding-left: 40px;
+    padding-left: 20px;
 }
 
 .navigation li{
@@ -457,13 +454,15 @@ height: 50px;
 }
 
 /* responsive対応 */
-@media(max-width:800px){
+@media(max-width:1000px){
     /* 共通部分 */
+    .wrapper{
+        padding: 0 1%;
+    }
 
     /* header部 */
     .header{
         align-items: center;
-        max-height: fit-content;
         justify-content: center;
     }
     .header-logo{
@@ -471,11 +470,11 @@ height: 50px;
         max-height: 80px;
     }
     .header-title{
-        font-size: 1.5rem;
+        font-size: 0.75rem;
     }
 
     .header-name{
-        font-size: 2.0rem;
+        font-size: 1.5rem;
     }
     .content{
         width: 100%;
@@ -485,9 +484,16 @@ height: 50px;
     .side{
         width: 100%;
     }
+
+    .navigation{
+        padding-left: 0;
+    }
+
     .footer{
         flex-direction: column;
     }
+
+
 
     /* 部分main */
     .main{
@@ -501,9 +507,10 @@ height: 50px;
     .main-image{
         display: flex;
         justify-content: center;
+        height: auto;
     }
     .main-word{
-        font-size: 1.5rem;
+        font-size: 1.0rem;
     }
     .main-explain-content{
         display: flex;
@@ -513,12 +520,24 @@ height: 50px;
     }
     .main-explain-content img{
         width: 100%;
+        height: auto;
     }
+    .main-explain-content h2{
+        text-align: center;
+    }
+    .main-explain-content p{
+        padding: 0 10%;
+    }
+
     .wellcome-zemi{
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
+    .wellcome-zemi h2{
+        text-align: center;
+    }
+    
 
     .newcommer-grid{
         display: grid;
@@ -542,6 +561,11 @@ height: 50px;
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
         margin: 20px 0;
+    }
+    
+    /* newcommer */
+    .plan-item p{
+        padding: 0 10%;
     }
 
 
