justfy content に変更

--- a/index.css
+++ b/index.css
@@ -535,7 +535,7 @@ height: 50px;
 
     .wellcome-zemi{
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
     .wellcome-zemi h2{
